--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,7 +66,16 @@ body {
     box-sizing: border-box;
     color: #fff;
   }
-  
+  #closeCart {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: #f00; /* o cualquier color que prefieras */
+    color: #fff; /* para el texto dentro del botón */
+    border: none;
+  } 
   .modal {
     display: none;
     position: fixed;
