--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,14 +11,6 @@ body {
     padding: 10px 0;
     text-align: center;
   }
-  .container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 0 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
   /* Estilos para los productos */
   .product {
     border: 1px solid #ddd;
@@ -242,3 +234,129 @@ body {
       background-color: #000;
     }
   }
+
+
+/* Estilos para los productos */
+.categories li {
+  display: block;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #f8f9fa;
+}
+
+.categories li a {
+  color: #000000;
+  display: block;
+  position: relative;
+}
+
+.categories li a span {
+  position: absolute;
+  right: 0;
+  font-size: 12px;
+  color: #adb5bd;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.product-item {
+  text-align: center;
+}
+
+.product-item .product-img {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin-bottom: 30px;
+}
+
+.product-item .product-img img {
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease;
+  z-index: 1;
+}
+
+.product-item h3 {
+  font-size: 15px;
+  margin-bottom: 0;
+}
+
+.product-item h3 a {
+  color: #000000;
+}
+
+.product-item .price {
+  font-size: 13px;
+}
+
+.sort {
+  background: #f8f9fa;
+  padding: 20px;
+}
+.sort strong {
+  font-weight: normal;
+}
+.sort select {
+  background: #f8f9fa;
+  border: none;
+}
+.custom-pagination ul li a svg, .custom-pagination ul li span svg {
+  position: relative;
+  top: -3px;
+  font-size: 16px;
+}
+.custom-pagination ul li {
+  display: inline !important;
+}
+.custom-pagination ul li > span {
+  background: #f8f9fa;
+}
+.custom-pagination ul li a, .custom-pagination ul li span {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50%;
+  position: relative;
+  font-size: 13px;
+  color: #000000;
+  border: 1px solid #ccc;
+  text-align: center;
+}
+
+.paginacion {
+  display: flex;
+  justify-content: center;
+}
+
+.page-link {
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin: 5px;
+  color: #000000;
+}
+
+.cart-icon {
+  font-size: 24px;
+  cursor: pointer;
+  padding-left: 15px;
+}
+
+.cart-icon:hover::before {
+  content: "Agregar al carrito";
+  position: absolute;
+  background-color: black;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+}
+
+
+/* Estilos para los productos */
